style.css
:root {
    /* primary colors */
    --clr-primary-1: hsl(31, 77%, 52%);
    --clr-primary-2: hsl(184, 100%, 22%);
    --clr-primary-3: hsl(179, 100%, 13%);

    /* neutral colors */
    --clr-neutral-para: hsla(0, 0%, 100%, 0.75); /*pharagraphs*/
    --clr-neutral-accent: hsl(0, 0%, 95%); /*bk, btn, headings*/

    --ff-base: 'Lexend Deca', sans-serif;
    --ff-accent: 'Big Shoulders Display', sans-serif;

    --fw-regular: 400;
    --fw-bold: 700;
}

/*
  1. Use a more-intuitive box-sizing model.
*/
*,
*::before,
*::after {
  box-sizing: border-box;
}
/*
  2. Remove default margin
*/
* {
  margin: 0;
}
/*
  3. Allow percentage-based heights in the application
*/
html,
body {
  height: 100%;
}
/*
  Typographic tweaks!
  4. Add accessible line-height
  5. Improve text rendering
*/
body {
  line-height: 1.7;
  -webkit-font-smoothing: antialiased;
}
/*
  6. Improve media defaults
*/
img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}
/*
  7. Remove built-in form typography styles
*/
input,
button,
textarea,
select {
  font: inherit;
}
/*
  8. Avoid text overflows
*/
p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}

h1,
h2,
h3 {
  line-height: 1;
} 

body {
    font-family: var(--ff-base);
    font-weight: var(--fw-regular);
    font-size: 0.9375rem;
    background: var(--clr-neutral-accent);
    color: var(--clr-neutral-para);

    display: grid;
    place-content: center;
}


.card-container {
    --container-padding: 3.5rem;
    display: grid;

    margin: 20px;
    border-radius: 0.6rem;
    overflow: hidden;
    max-width: 1024px;
}

@media (min-width: 600px) {
  .card-container {
    grid-template-columns: 1fr 1fr 1fr;
    
  }
}

.card {
    padding: var(--container-padding);
    display: grid;
    gap: 2rem;  
}

@media (min-width: 600px) {
  h1 {
    margin-top: 1rem;
  }

  p {
    margin-bottom: 5rem;
  }
}

.card h1{
    color: var(--clr-neutral-accent);
    font-family: var(--ff-accent);
    text-transform: uppercase;
    font-size: 2.5rem;
}

.card-one {
    background-color: var(--clr-primary-1);
}

.card-two {
    background-color: var(--clr-primary-2);
}

.card-three {
    background-color: var(--clr-primary-3);
}

.btn {
    cursor: pointer;
    background-color: var(--clr-neutral-accent);
    border: 0;
    border-radius: 100vw;
    padding: 0.75rem 2rem;
    font-weight: var(--fw-bold);
}

.card-one-btn {
    color: var(--clr-primary-1);
}

.card-one-btn:hover {
  background-color: var(--clr-primary-1);
  color: var(--clr-neutral-accent);
  border: 1px solid var(--clr-neutral-accent);
}

.card-two-btn {
    color: var(--clr-primary-2);
}

.card-two-btn:hover {
  background-color: var(--clr-primary-2);
  color: var(--clr-neutral-accent);
  border: 1px solid var(--clr-neutral-accent);
}

.card-two-btn {
    color: var(--clr-primary-3);
}

.card-three-btn:hover {
  background-color: var(--clr-primary-3);
  color: var(--clr-neutral-accent);
  border: 1px solid var(--clr-neutral-accent);
}

.attribution { font-size: 11px; text-align: center; }
.attribution a { color: hsl(228, 45%, 44%); }

